--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <img src="imagenes/terminator.jpeg" alt="Foto de ejemplo" width="800" >
 
         <h2>Un video interesante</h2>
-        <video controls width="640" height="360">
-            <source src="videos/terminator1.mp4" type="video/mp4">
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/0Cc-h3ATwZ4?si=Mk7RYvDEQdO6mReZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             
         </video>
     </section>
@@ -35,3 +34,4 @@
 
 </body>
 </html>
+
