--- a/galeria.html
+++ b/galeria.html
@@ -19,8 +19,8 @@
 
     <section class="contenido">
         <h2>Mis imágenes favoritas</h2>
-        <img src="imagenes/foto1.jpg" alt="Imagen 1" width="250">
-        <img src="imagenes/foto2.jpg" alt="Imagen 2" width="250">
+        <img src="imagenes/terminator2.jpg" alt="Imagen 1" width="250">
+        <img src="imagenes/terminator3.jpg" alt="Imagen 2" width="250">
     </section>
 
     <footer>
@@ -28,4 +28,5 @@
     </footer>
 
 </body>
+
 </html>
