--- a/galeria.html
+++ b/galeria.html
@@ -20,6 +20,7 @@
     <section class="contenido">
         <h2>Mis imágenes favoritas</h2>
         <img src="imagenes/terminator2.jpg" alt="Imagen 1" width="250">
+        <h2> ejemplo de imagen </h2>
         <img src="imagenes/terminator3.jpg" alt="Imagen 2" width="250">
     </section>
 
@@ -30,3 +31,4 @@
 </body>
 
 </html>
+
